--- a/csNgJS/index.html
+++ b/csNgJS/index.html
@@ -13,6 +13,66 @@
 					{{product.name}}
 					<em class="pull-right">{{product.price | currency}}</em>
 				</h3>
+
+				<div ng-show="product.images.length">
+					<img ng-src="{{product.images[0]}}">
+				</div>
+
+				<section ng-controller="PanelController as panel">
+					<ul class="nav nav-pills">
+						<li ng-class="{active: panel.isSelected(1)}"><a href ng-click="panel.selectTab(1)">Description</a></li>
+						<li ng-class="{active: panel.isSelected(2)}"><a href ng-click="panel.selectTab(2)">Specifications</a></li>
+						<li ng-class="{active: panel.isSelected(3)}"><a href ng-click="panel.selectTab(3)">Reviews</a></li>
+					</ul>
+
+					<div class="panel" ng-show="panel.isSelected(1)">
+						<h4>Description</h4>
+						<p>{{ product.description }}</p>
+					</div>
+					<div class="panel" ng-show="panel.isSelected(2)">
+						<h4>Specifications</h4>
+						<blockquote>None yet</blockquote>
+					</div>
+					<div class="panel" ng-show="panel.isSelected(3)">
+						<ul>
+							<h4>Reviews</h4>
+							<li ng-repeat="review in product.reviews" style="list-style: none;">
+								<blockquote>
+									<strong>{{review.stars}} Stars</strong>
+									{{review.body}}
+									<cite class="clearfix">&#8212; {{review.author}}</cite>
+								</blockquote>
+							</li>
+						</ul>
+
+						<!-- Review Form -->
+						<form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewCtrl.addReview(product)" >
+							<!-- Live Preview -->
+							<blockquote ng-show="reviewCtrl.review.stars || reviewCtrl.review.body || reviewCtrl.review.author">
+								<strong>{{reviewCtrl.review.stars}} Stars</strong>
+								{{reviewCtrl.review.body}}
+								<cite class="clearfix">&#8212; {{reviewCtrl.review.author}}</cite>
+							</blockquote>
+							
+							<!-- Review Form -->
+							<h4>Submit a Review</h4>
+							<fieldset class="form-group">
+								<select ng-model="reviewCtrl.review.stars" title="Stars"class="form-control" ng-options="stars for stars in [5,4,3,2,1]" >
+									<option value="">Rate the Product</option>
+								</select>
+							<fieldset class="form-group">
+								<textarea ng-model="reviewCtrl.review.body" class="form-control" title="Review" ></textarea>
+							</fieldset>
+							<fieldset class="form-group">
+								<input ng-model="reviewCtrl.review.author" type="email" title="Email" class="form-control" placeholder="jimmyDean@example.org" />
+							</fieldset>
+							<fieldset class="form-group">
+								<input type="submit" value="Submit Review" class="btn btn-primary pull-right" />
+							</fieldset>
+						</form>
+					</div>
+
+				</section>
 			</li>
 		</ul>
 		</div>
